# ifisher

./: CMakeLists.txt  INSTALL
conf/: etc_profile  executor.conf  groups.xml  jobs_manager.conf  kvm.xml  lxc.conf  resource_scheduler.conf  submit_app.xml  submit_img.xml  submit_job.xml  submit_job1.xml  submit_job2.xml  submit_job3.xml  submit_job4.xml  submit_job5.xml  submit_job6.xml  submit_job_e.xml  submit_job_e2.xml  submit_job_e3.xml  submit_job_e4.xml  submit_job_engineering.xml  submit_job_test.xml  submitter.conf
doc/: Lynn 代码阅读.doc
log/: .ResourceScheduler.log.swp
script/: cancel_hdfs.sh  clean_for_git.sh  clean_proxy.sh  clean_zk.sh  copy_executor_to_hdfs.sh  install.sh  install_hdfs.sh  setup_zk.sh  update_executor.sh  (+1 more)
src/: CMakeLists.txt
src/JobsManager/: CMakeLists.txt  app_manager.cpp  app_manager.h  batch_job.cpp  batch_job.h  batch_task.cpp  batch_task.h  config.cpp  constraint_edge.h  default_scheduler.cpp  default_scheduler.h  dispatcher.cpp  dispatcher.h  event.cpp  event.h  group.cpp  group.h  group_pool.cpp  group_pool.h  handler.cpp  handler.h  image_manager.cpp  image_manager.h  job.cpp  job.h  job_enum.h  job_master.cpp  job_master.h  job_num.h  job_parser.cpp  job_parser.h  job_pool.cpp  job_pool.h  job_scheduler.cpp  job_scheduler.h  jobs_manager_main.cpp  jobs_manager_service.cpp  jobs_manager_service.h  task.cpp  task.h  (+5 more)
src/JobsManager/unused/: job_attr_checker.cpp  job_attr_checker.h  job_master.cpp  job_master.h  job_match_data_type.h  job_matcher.cpp  job_matcher.h  job_selector.cpp  job_selector.h
src/ResourceScheduler/: CMakeLists.txt  dispatcher.cpp  dispatcher.h  event.cpp  event.h  handler.cpp  handler.h  machine.cpp  machine.h  machine_constances.h  match_list.cpp  match_list.h  match_maker.cpp  match_maker.h  resource_scheduler_engine.cpp  resource_scheduler_engine.h  resource_scheduler_main.cpp  resource_scheduler_service.cpp  resource_scheduler_service.h  work_thread.cpp
src/common/classad/: classad_complement.h
src/common/clynn/: block_queue.h  cond.h  get_ip.h  mutex.h  rpc.h  rwlock.h  singleton.h  string_utility.h  thread.cpp  thread.h  timer.h
src/common/lxc/: confile.h  version
src/executor/: .resource_manager.cpp.swo  .resource_manager.cpp.swp  .vm_pool.cpp.swp  .vm_pool.h.swp  .work_thread.cpp.swp  CMakeLists.txt  CMake_bak.txt  checker.cpp  checker.h  clean_environment.cpp  config.cpp  dispatcher.cpp  dispatcher.h  event.cpp  event.h  executor_main.cpp  executor_register.cpp  executor_register.h  handler.cpp  handler.h  hdfs_wrapper.cpp  hdfs_wrapper.h  image_manager.cpp  image_manager.h  ip_pool.cpp  ip_pool.h  kvm.cpp  kvm.h  lxc.cpp  lxc.h  resource_manager.cpp  resource_manager.h  service.cpp  service.h  system.cpp  system.h  task_action.cpp  task_action.h  task_entity.cpp  task_entity.h  (+7 more)
src/executor/lxc_test/: lxc_test.c  lxc_test.h
src/executor_monitor/: CMakeLists.txt  checker.cpp  checker.h  config.cpp  hdfs_wrapper.cpp  main.cpp  restart_executor.cpp  restart_executor.h  work_thread.cpp
src/include/: classad_attr.h  proxy.h  type.h
src/proxy/JobsManager/: jobs_manager.thrift
src/proxy/ResourceScheduler/: resource_scheduler.thrift
src/proxy/executor/: executor.thrift
src/submitter/: .image.cpp.swp  .submitter.cpp.swo  CMakeLists.txt  app.cpp  app.h  cmd_parse.cpp  cmd_parse.h  config.cpp  hdfs_wrapper.cpp  hdfs_wrapper.h  image.cpp  image.h  job.cpp  job.h  submitter.cpp
src/submitter/14_03_15/: image_config.cpp  image_config.h  image_file.cpp  image_file.h
src/submitter/remain/: app.cpp  app.h  app_config.cpp  app_config.h  app_file.cpp  app_file.h  user.cpp  user.h
src/submitter/test/: CMakeLists.txt  app_file_test.cpp  read_file_test  read_file_test.cpp
src/test/: CMakeLists.txt  a.out  atomic.cpp  boost_split.cpp  check_process.cpp  classad_evaluate.cpp  classad_match.cpp  classad_match2.cpp  classad_simple.cpp  foo.h  log4cplus_simple.cpp  map_shared_ptr.cpp  regist_machine.cpp  test.cpp  test_1.cpp  test_lock.cpp  test_lock2.cpp  test_process.cpp  time.cpp  zk_common_test.cpp  zk_comprehensive_test.cpp  zookeeper.cpp
src/test/JobsManager/: CMakeLists.txt  submit_job.cpp  submit_job_daemon.cpp  submit_job_xml.cpp
src/test/collector/: CMakeLists.txt  submit_job.cpp
src/test/executor/: CMakeLists.txt  kill_task.cpp  start_task.cpp  start_task_bak.cpp  stop_task.cpp  system_test.cpp  test_rpc.cpp
src/test/executor/test_rpc_server/: CMakeLists.txt  service.cpp  service.h  test.cpp
src/web/lynn/: manage.py  nohup.out
src/web/lynn/lynn/: .settings.py.swo  .settings.py.swp  settings.py  urls.py  wsgi.py
src/web/lynn/medias/css/: basic.css  header.css  login.css  map.css  rightmenu.css  tree.css  workhistory.css
src/web/lynn/medias/css/bak/: app.css  physical.bak.css  user.css
src/web/lynn/medias/dtree/: dtree.css  dtree.js
src/web/lynn/medias/jquery-ui-1.8.23/: demo.html
src/web/lynn/medias/jvmap/: china-zh.js  jquery.vector-map.js
src/web/lynn/medias/mjs/: apptree.js  data_input.js  gh_install_state.js  gh_run_state.js  gh_stop_state.js  ghjob_state.js  job_install_state.js  job_run.js  job_run_state.js  job_stop_state.js  jobstate.js  jsonapp.js  map0.js  map_dx.js  map_global.js  map_lt.js  mymenu.js  physical.js  phytree.js  readonly.js  readonly_img.js  rightmenu.js  rrd.js  select.js  select_gh_add.js  select_job_install.js  select_job_run.js  select_job_stop.js  select_virt_add.js  server.js  server_state.js  table.js  table_width.js  unselect.js  virt.js  virt_state.js  workerjob_state.js  workerjob_state.js.bak  workertask_state.js  workertask_state.js.bak
src/web/lynn/medias/mjs/bak/: tree.bak.js  tree1.js  tree_ .js
src/web/lynn/medias/progressbar/css/: common.css  valid.css
src/web/lynn/medias/progressbar/js/: jquery.progressbar.js  jquery.progressbar.js~
src/web/lynn/service/: .views.py.swp  demo.py  filereplace.py  form.py  models.py  rpc.py  server.py  singleton.py  views.py
src/web/lynn/templates/: job_submit.html  task_state_info_list.html
src/web/lynn/xml_file/: submit_job_model.bak  submit_job_model.tmp  submit_job_model.xml
